# Toy-Computer-Assembler

./: .gitignore  README.md  play.py  pyproject.toml
examples/assembly/: arithmetic.asm  div_mod.asm  guess.asm  hello.asm  hurkle.asm  rule90.asm  smiley.asm  wumpus.asm
examples/machine/: div_mod.mc  fibonacci.mc
src/toy/: __init__.py  __main__.py  assembler.py  toy_computer.py
src/toy/lib/: assembler.py  exception.py
toy/: __init__.py  __main__.py  assembler.py  toy_computer.py
