[project]
name = "toy"
version = "0.0.1"
authors = [{ name = "Richard Nathan Ambler", email = "rambler@wya.top" }]
description = "An implementation of Sedgewick & Wayne's Toy Computer and a simple assembler."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
  "Typing :: Typed",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/ram6ler/Toy-Computer-Assembler"
Issues = "https://github.com/ram6ler/Toy-Computer-Assembler/issues"

[tool.setuptools.package-data]
"toy" = ["py.typed"]
